--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   lints: 1.0.1
   flutter_screenutil: ^5.3.1
+  font_awesome_flutter: ^10.0.0
   flutter_test:
     sdk: flutter
 
