--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,32 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.1
   google_fonts: ^2.3.1
+  firebase_storage: ^10.2.10
+  firebase_core: ^1.14.0
+  audioplayers: ^0.20.1
+  fluttertoast: ^8.0.9
+  audiotagger: ^2.2.1
+  flutter_media_metadata: ^1.0.0
+  id3: ^1.0.2
   flutter:
     sdk: flutter
+  cloud_firestore: ^3.1.11
+  google_sign_in: ^5.2.4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   lints: 1.0.1
   flutter_screenutil: ^5.3.1
   font_awesome_flutter: ^10.0.0
+  firebase_auth: ^3.3.12
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 
 flutter:
   uses-material-design: true
