--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  esewa_pnp: ^2.0.0
   cupertino_icons: ^1.0.2
   get: 4.6.1
   google_fonts: ^2.3.1
@@ -13,14 +14,21 @@ dependencies:
   firebase_core: ^1.14.0
   audioplayers: ^0.20.1
   fluttertoast: ^8.0.9
-  audiotagger: ^2.2.1
-  flutter_media_metadata: ^1.0.0
-  id3: ^1.0.2
   flutter:
     sdk: flutter
   cloud_firestore: ^3.1.11
   google_sign_in: ^5.2.4
+  image_picker: ^0.8.4+11
+  file_picker: ^4.5.1
+  path: ^1.8.0
+  share_plus: ^4.0.3
+  path_provider: ^2.0.9
+  permission_handler: ^9.2.0
+  flutter_downloader: ^1.7.3
+  http: ^0.13.4
+  
 
+  
 dev_dependencies:
   flutter_lints: ^1.0.0
   lints: 1.0.1
@@ -42,3 +50,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/esewa/
