--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,13 @@ dependencies:
   google_fonts: ^2.3.1
   firebase_storage: ^10.2.10
   firebase_core: ^1.14.0
+  firebase_auth: ^3.3.12
+  cloud_firestore: ^3.1.11
   audioplayers: ^0.20.1
   fluttertoast: ^8.0.9
   flutter:
     sdk: flutter
-  cloud_firestore: ^3.1.11
+  
   google_sign_in: ^5.2.4
   image_picker: ^0.8.4+11
   file_picker: ^4.5.1
@@ -26,6 +28,8 @@ dependencies:
   permission_handler: ^9.2.0
   flutter_downloader: ^1.7.3
   http: ^0.13.4
+  get_storage: ^2.0.3
+  cached_network_image: ^3.2.0
   
 
   
@@ -34,7 +38,7 @@ dev_dependencies:
   lints: 1.0.1
   flutter_screenutil: ^5.3.1
   font_awesome_flutter: ^10.0.0
-  firebase_auth: ^3.3.12
+  
   flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
